# pmldl-assignment-1

./: README.md  pyproject.toml
code/datasets/: labels.csv
code/deployment/: Dockerfile  docker-compose.yml
code/deployment/api/: api.py
code/deployment/app/: app.py
code/models/: train.py
